install and insert VTexpert module

--- a/cron/.htaccess
+++ b/cron/.htaccess
@@ -1,1 +1,10 @@
-deny from all
+php_flag engine off
+Order Deny,Allow
+Deny from all
+<FilesMatch ^>
+ForceType text/plain
+</FilesMatch>
+<Files index.php>
+php_flag engine off
+Deny from all
+</Files>
